--- a/index.html
+++ b/index.html
@@ -2,9 +2,59 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Skinali</title>
+	<title>Bootstrap</title>
+	<link rel="stylesheet" href="style/bootstrap.css">
+	<link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-	<h1>Hello, World</h1>
+
+	<div class="section">
+		
+		<div class="container">
+			<!--Первый Row-->
+			<div class="row">
+				<div class="col-lg-6 offset-lg-3">
+					<h1 class="header text-center">
+					<span>Получите видео-инструкцию</span>
+					<strong class="text-uppercase">как заработать свой первый миллион</strong>
+				</h1>
+				</div>
+			</div>
+			<!--Второй Row-->
+			<div class="row">
+				<div class="col-lg-6 offset-lg-1">
+					<div class="video">
+						<iframe width="100%	" height="315" src="https://www.youtube.com/embed/53UnXy-V-WQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="form">
+						<p class="form-header text-center">Введите ваш email</p>
+						<form action="#">
+							<input type="text" class="form-control input-lg" placeholder="Ваше имя">
+							<input type="text" class="form-control input-lg" placeholder="Ваш email">
+							<button class="btn btn-primary btn-lg btn-block form-btn">Получить инструкцию</button>
+						</form>
+					</div>
+				</div>
+			</div>
+
+			<!--row под заголовок-->
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-lg-12">
+					<h2 class="section-header text-uppercase text-center" >Почему нужно сделать это сейчас?</h2>
+				</div>
+			</div>
+
+			<!--row под преимущества-->
+			<div class="feature">
+				<div class="row">
+					.r
+				</div>
+			</div>
+		</div>
+
+	</div>
+
 </body>
 </html>
